adding a winning screen and loop

--- a/rpg_settings.json
+++ b/rpg_settings.json
@@ -1,5 +1,5 @@
 {
   "use_emojis": false,
-  "wall_sprite": "brick_brown0.png",
+  "wall_sprite": "stone_dark0.png",
   "floor_sprite": "dirt0.png"
 }
