--- a/rpg_settings.json
+++ b/rpg_settings.json
@@ -6,7 +6,7 @@
     1920,
     1080
   ],
-  "music_volume": 0.5,
-  "sound_volume": 0.5,
+  "music_volume": 0.10000000000000003,
+  "sound_volume": 0.2,
   "fullscreen": true
 }
